chatbot-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"chatbot:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"chatbot\")].image"}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"7","image.openshift.io/triggers":"[{\"from\":{\"kind\":\"ImageStreamTag\",\"name\":\"chatbot:latest\"},\"fieldPath\":\"spec.template.spec.containers[?(@.name==\\\"chatbot\\\")].image\"}]","openshift.io/generated-by":"OpenShiftNewApp"},"labels":{"app":"chatbot","app.kubernetes.io/component":"chatbot","app.kubernetes.io/instance":"chatbot"},"name":"chatbot","namespace":"chatbot"},"spec [...]
    openshift.io/generated-by: OpenShiftNewApp
  name: chatbot
  namespace: chatbot
  labels:
    app: chatbot
    app.kubernetes.io/component: chatbot
    app.kubernetes.io/instance: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chatbot
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: chatbot
          command:
            - /opt/app-root/bin/gunicorn
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: 'image-registry.openshift-image-registry.svc:5000/chatbot/chatbot@sha256:2807aef10df47cd9f49a2d287a9e055fd0987f319d622f0c8a4429975667c90e'
          args:
            - '--bind'
            - '0.0.0.0:8080'
            - 'chatbot:app'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
