svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: chatbot-service
  namespace: chatbot
  labels:
    app: chatbot
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http-443
      protocol: TCP
      port: 443
      targetPort: 443
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.66.115
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: chatbot
